# race-core

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  create-kits.py  docker_run.sh  merge-kits.py
plugin-artifact-manager-twosix-cpp-local/source/: CMakeLists.txt  PluginArtifactManagerTwoSixCppLocal.cpp  PluginArtifactManagerTwoSixCppLocal.h  log.cpp  log.h  manifest.json  zip.cpp  zip.h
plugin-artifact-manager-twosix-cpp/source/: CMakeLists.txt  PluginArtifactManagerTwoSixCpp.cpp  PluginArtifactManagerTwoSixCpp.h  curlwrap.h  log.cpp  log.h  manifest.json
plugin-comms-twosix-cpp/source/: CMakeLists.txt  PluginCommsTwoSixCpp.cpp  PluginCommsTwoSixCpp.h  manifest.json
plugin-comms-twosix-cpp/source/base/: Channel.cpp  Channel.h  Connection.cpp  Connection.h  Link.cpp  Link.h  LinkProfileParser.cpp  LinkProfileParser.h
plugin-comms-twosix-cpp/source/bootstrap/: BootstrapChannel.cpp  BootstrapChannel.h  BootstrapLink.cpp  BootstrapLink.h  BootstrapServer.cpp  BootstrapServer.h
plugin-comms-twosix-cpp/source/bootstrap-file/: BootstrapFileChannel.cpp  BootstrapFileChannel.h  BootstrapFileLink.cpp  BootstrapFileLink.h  BootstrapFileLinkProfileParser.cpp  BootstrapFileLinkProfileParser.h  BootstrapFileWatcher.cpp  BootstrapFileWatcher.h
plugin-comms-twosix-cpp/source/bootstrap-indirect/: IndirectBootstrapChannel.cpp  IndirectBootstrapChannel.h  IndirectBootstrapLink.cpp  IndirectBootstrapLink.h
plugin-comms-twosix-cpp/source/config/: LinkConfig.h  helper.cpp  helper.h
plugin-comms-twosix-cpp/source/direct/: DirectChannel.cpp  DirectChannel.h  DirectLink.cpp  DirectLink.h  DirectLinkProfileParser.cpp  DirectLinkProfileParser.h
plugin-comms-twosix-cpp/source/utils/: PersistentStorageHelpers.h  PortAllocator.cpp  PortAllocator.h  base64.cpp  base64.h  log.cpp  log.h
plugin-comms-twosix-cpp/source/whiteboard/: IndirectChannel.cpp  IndirectChannel.h  TwosixWhiteboardLink.cpp  (+3 more)
plugin-comms-twosix-decomposed-cpp/source/: CMakeLists.txt  manifest.json
plugin-comms-twosix-golang/source/: .gitignore  CMakeLists.txt  CommsPlugin.go  channels.go  loader.cpp  manifest.json
plugin-comms-twosix-java/: .dockerignore  .gitignore  CMakeLists.txt  README.md
plugin-comms-twosix-java/kit/: README.md
plugin-comms-twosix-java/plugin/: CMakeLists.txt  build.gradle  pom.xml  settings.gradle
plugin-comms-twosix-python/: .blackrc.toml  .gitignore  CMakeLists.txt  Makefile  README.md
plugin-comms-twosix-python/kit/: README.md
plugin-comms-twosix-python/source/: Log.py  PluginCommsTwoSixPython.py  channels.py  manifest.json  response_logger.py
plugin-comms-twosix-rust/: .gitignore  CMakeLists.txt  README.md
plugin-comms-twosix-rust/kit/: .gitignore  README.md
plugin-comms-twosix-rust/loader/: CMakeLists.txt  ChannelPropertiesC.cpp  ChannelPropertiesC.h  ChannelRoleC.cpp  ChannelRoleC.h  LinkPropertiesC.cpp  LinkPropertiesC.h  PluginCommsRustCppWrapper.cpp  PluginCommsRustCppWrapper.h  README.md  helper.cpp  helper.h  loader.cpp  manifest.json  plugin_extern_c.h  race_log.cpp  race_log.h  sdk_c_wrapper.cpp  sdk_c_wrapper.h
plugin-comms-twosix-rust/plugin/: CMakeLists.txt  Cargo.toml
plugin-comms-twosix-rust/pluginwrapper/: CMakeLists.txt  Cargo.toml  README.md
plugin-comms-twosix-rust/shims/: CMakeLists.txt  Cargo.toml  README.md
plugin-network-manager-twosix-cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
plugin-network-manager-twosix-cpp/kit/: README.md
plugin-network-manager-twosix-cpp/source/: BootstrapManager.cpp  BootstrapManager.h  CMakeLists.txt  ClearMessagePackageTracker.cpp  ClearMessagePackageTracker.h  ConfigNMTwoSix.cpp  ConfigNMTwoSix.h  ConfigPersonas.cpp  ConfigPersonas.h  ConfigStaticLinks.cpp  ConfigStaticLinks.h  ExtClrMsg.cpp  ExtClrMsg.h  JsonIO.h  LinkManager.cpp  LinkManager.h  LinkProfile.cpp  LinkProfile.h  LinkWizard.cpp  LinkWizard.h  Log.cpp  Log.h  Persona.cpp  Persona.h  PluginNMTwoSix.cpp  PluginNMTwoSix.h  PluginNMTwoSixClientCpp.cpp  PluginNMTwoSixClientCpp.h  PluginNMTwoSixServerCpp.cpp  PluginNMTwoSixServerCpp.h  RaceCrypto.cpp  RaceCrypto.h  filesystem.h  helper.cpp  helper.h  manifest.json
plugin-network-manager-twosix-python/: .dockerignore  .gitignore  .mypy.ini  .pycodestylerc  .pylintrc  CMakeLists.txt  Makefile  README.md
plugin-network-manager-twosix-python/kit/: README.md
plugin-network-manager-twosix-python/scripts/: network_visualizer.py  requirements.txt
plugin-network-manager-twosix-python/source/: ClearMessagePackageTracker.py  ExtClrMsg.py  LinkWizard.py  Log.py  Persona.py  PluginHelpers.py  PluginNMTwoSix.py  PluginNMTwoSixClientPy.py  PluginNMTwoSixServerPy.py  RaceCrypto.py  manifest.json
plugin-network-manager-twosix-python/test/: race.json  test_image.sh
race-node-daemon/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.gradle  debug.keystore  settings.gradle
race-node-daemon/race-daemon-android/: README.md  build.gradle
race-node-daemon/race-daemon-linux/: README.md  build.gradle
race-node-daemon/race-daemon-sdk/: README.md  build.gradle
race-registry/source/: CMakeLists.txt  RaceRegistry.cpp  RaceRegistry.h  RaceRegistryApp.cpp  RaceRegistryApp.h  createPidFile.cpp  install.sh  main.cpp
raceclient-android/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.gradle  gradle.properties  settings.gradle
raceclient-android/app/: .gitignore  build.gradle
racesdk/: .dockerignore  .gitignore  CMakeLists.txt  README.md  create-package.sh  helper_functions.sh
racesdk/common/: CMakeLists.txt  README.md
racesdk/core/: CMakeLists.txt  README.md
racesdk/docker-image/: Dockerfile  README.md  build_sdk_image.sh
racesdk/java-shims/: .gitignore  CMakeLists.txt
racesdk/language-shims/: CMakeLists.txt  README.md
racesdk/racetestapp-shared/: CMakeLists.txt  README.md
racesdk/storage-encryption/: CMakeLists.txt  README.md
racesdk/test-harness/: README.md
racesdk/test-mocks/: CMakeLists.txt
racetestapp-linux/source/: CMakeLists.txt  RaceLinuxApp.cpp  RaceLinuxApp.h  createPidFile.h  install.sh  main.cpp
(+1050 files in other folders)
